# smart-enums

./: .coveragerc  .gitignore  .pylintrc  README.md  pytest.ini  requirements.txt  setup.cfg  tox.ini
.github/workflows/: deploy-docs.yml  deploy.yml  unit-tests.yml
docs/source/: api.rst  conf.py  index.rst
src/smart_enums/: option.py  result.py
tests/: test_option.py  test_result.py
