[metadata]
name = smart-enums
version = 0.0.1
author = Marius Wilms
author_email = info@mariuswilms.dev
description = Contains a Result and Option enum similar to other languages like Rust, Haskell or Elm.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mawilms/smart-enums
project_urls =
    Bug Tracker = https://github.com/mawilms/smart-enums/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src